修改返回结果，增加信息

--- a/test/index.html
+++ b/test/index.html
@@ -5,6 +5,7 @@
     <title>Document</title>
     <link href="test.css" />
     <script src="index.js"></script>
+    <script src="http://www.baidu.com/index.js"></script>
 </head>
 <body>
 <style>
